correct auto ads

--- a/huu-ich/cac-loai-bao-hiem/bhnt-lien-ket-chung.html
+++ b/huu-ich/cac-loai-bao-hiem/bhnt-lien-ket-chung.html
@@ -291,8 +291,8 @@ data-ad-slot="5275186684">
   <p><b>Kết luận:</b></p>
   <div class="flright"><amp-img alt="Manulife Gia Đình Tôi Yêu" src="/images/GDTY.svg" width="400" height="300" layout="responsive"></amp-img></a></div>
   <p>Các đặc tính mới của bảo hiểm nhân thọ liên kết chung giúp khách hàng sử dụng hợp đồng bảo hiểm linh hoạt hơn, nếu khách không dùng đến các đặc tính đó thì tác dụng bảo hiểm và tích luỹ cũng tương đương như hợp đồng bảo hiểm truyền thống.
-  <br>Tính linh hoạt cũng như con dao hai lưỡi, nếu khách hàng dùng các đặc tính linh hoạt mà thiếu kỷ luật tiết kiệm thì tác dụng tích luỹ sẽ kém nhiều.</p>
-  <p>Với những ưu điểm như vậy thì người ta có thể <span class="tmark">dùng bảo hiểm nhân thọ liên kết chung để làm gì</span>?
+  <br>Tính linh hoạt cũng như con dao hai lưỡi, nếu khách hàng dùng các đặc tính linh hoạt mà thiếu kỷ luật tiết kiệm thì tác dụng tích luỹ sẽ kém nhiều.
+  <br style="clear:both">Với những ưu điểm như vậy thì người ta có thể <span class="tmark">dùng bảo hiểm nhân thọ liên kết chung để làm gì</span>?
   <br>Một người bắt đầu đi làm sẽ lập các kế hoạch như lập gia đình, mua nhà, hưu trí. Mỗi kế hoạch cần một số tiền tiết kiệm hàng tháng, số tiền đó nên để vào bảo hiểm nhân thọ liên kết chung do những ưu điểm của nó so với ngân hàng. Bên cạnh việc tích luỹ, số tiền bảo hiểm cũng được điều chỉnh theo từng giai đoạn của cuộc đời. Đến mỗi thời điểm dùng tiền (làm đám cưới, mua nhà…) thì rút tiền từ bảo hiểm và vẫn giữ hợp đồng bảo hiểm. Bên cạnh số tiền tích luỹ đó, người chủ hợp đồng lại có một <span class="tmark">quỹ dự phòng khá lớn</span> cho những việc không mong muốn như bệnh tật, tai nạn.</p>
   <p>Sản phẩm bảo hiểm nhân thọ liên kết chung Gia Đình Tôi Yêu của Manulife với mức phí từ 585 ngàn đồng mỗi tháng là một con dao xếp Thuỵ Sĩ cho ngân sách gia đình, với nhiều lưỡi để đối phó với các vấn đề khác nhau, vừa để bảo vệ vừa để tích luỹ tài sản. Ai cần dùng lưỡi nào thì mở lưỡi đó ra, không cần thì xếp vào.</p>
 
