--- a/huu-ich/cau-chuyen/nghi-huu-som.html
+++ b/huu-ich/cau-chuyen/nghi-huu-som.html
@@ -223,7 +223,7 @@ data-ad-slot="5275186684">
 
   <h1>Về hưu trước 40 tuổi</h1>
   <p>Bài dưới đây dịch lại từ <a href="http://www.msn.com/en-us/money/news/how-this-couple-retired-in-their-30s-to-travel-the-world/ar-AAacOgr?ocid=iehp" target="_blank">bài báo trên MSN</a>.</p>
-  <b>Một cặp vợ chồng đủ tiền về hưu và đi du lịch quanh thế giới trước tuổi 40 bằng cách nào?</b>
+  <p><b>Một cặp vợ chồng đủ tiền về hưu và đi du lịch quanh thế giới trước tuổi 40 bằng cách nào?</b></p>
   <div class="flright"><amp-img alt="Jeremy - Winnie" src="/images/JeremyWinnie.jpg" width="728" height="504" layout="responsive"></amp-img></div>
   <p>Jeremy tốt nghiệp đại học xong là bắt đầu làm cho bộ phận thiết kế điện thoại di động của Motorola ngay, làm 80 giờ mỗi tuần trong 4-5 năm. Động cơ của tinh thần làm việc đó là món nợ 40 ngàn đô-la, trong đó 35 ngàn đô-la là tiền vay để học và 5 ngàn đô-la là tiền chi tiêu bằng thẻ tín dụng.
   <br>Với mức lương 40 ngàn đô-la mỗi năm mà anh ta còn mua một xe hơi mới và một căn nhà 3 phòng ngủ, để cho bằng bạn bè; vì nhà mới mua ở xa chỗ làm nên anh không còn đi làm bằng xe đạp được nữa mà phải lái xe hơi hết 40 phút. Khoản nợ mua nhà và xe cộng với nợ cũ làm anh ta phải chú ý đến tình hình tài chính của mình, và anh bắt đầu lập kế hoạch để trả hết nợ và về hưu ở tuổi 65, rồi bắt đầu đầu tư. Anh ta dùng những khoản vay miễn lãi trong 12 tháng để trả phần lớn nợ tiền học và tiền mua xe.
