--- a/huu-ich/cau-chuyen/uoc-mo-thanh-ti-phu.html
+++ b/huu-ich/cau-chuyen/uoc-mo-thanh-ti-phu.html
@@ -192,9 +192,9 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <p><b>Làm thế nào để trở thành tỉ phú một cách chắc chắn và nhẹ nhàng?</b></p>
   <div class="flright"><amp-img alt="Tích luỹ tài sản bằng quỹ mở" src="/images/Mutual-Fund.jpg" width="500" height="400" layout="responsive"></amp-img></div>
   <p>Bạn 25 tuổi, mới vào đời với hai bàn tay trắng, lương đủ sống. Bạn ước mơ có một tỉ đồng. Làm thế nào để có?
-  <br>Rất dễ! Đồng minh của bạn là thời gian, thời gian sẽ giúp bạn trở thành tỉ phú một cách dễ dàng, hãy luôn đồng hành với đồng minh đó. Chỉ cần <b>để dành 33 ngàn đồng mỗi ngày</b>, thời gian sẽ đem đến <b>một tỉ đồng</b> cho bạn. Thời gian không bao giờ ngừng, đừng để thời gian bỏ rơi.</p>
+  <br>Rất dễ! Đồng minh của bạn là thời gian, thời gian sẽ giúp bạn trở thành tỉ phú một cách dễ dàng, hãy luôn đồng hành với đồng minh đó. Chỉ cần <b>để dành 33 ngàn đồng mỗi ngày</b>, thời gian sẽ đem đến <b>một tỉ đồng</b> cho bạn. Thời gian không bao giờ ngừng, đừng để thời gian bỏ rơi.
 <br style="clear:both">
-  <p>Giả sử trượt giá 5%/năm. Sau 35 năm thì 5,516 tỉ đồng mới tương đương 1 tỉ đồng hiện tại. Để có 5,516 tỉ đồng vào lúc đó, bạn hãy để 1,017 triệu đồng mỗi tháng vào nơi nào <a href="../dau-tu-co-phieu/so-tk-hay-dau-tu">sinh lợi 10% mỗi năm</a>, năm sau phải để nhiều hơn năm trước 5%.</p>
+  Giả sử trượt giá 5%/năm. Sau 35 năm thì 5,516 tỉ đồng mới tương đương 1 tỉ đồng hiện tại. Để có 5,516 tỉ đồng vào lúc đó, bạn hãy để 1,017 triệu đồng mỗi tháng vào nơi nào <a href="../dau-tu-co-phieu/so-tk-hay-dau-tu">sinh lợi 10% mỗi năm</a>, năm sau phải để nhiều hơn năm trước 5%.</p>
 
 
   <p>Câu hỏi:</p>
