--- a/huu-ich/de-tien-vao-dau.html
+++ b/huu-ich/de-tien-vao-dau.html
@@ -15,7 +15,7 @@
 
 <script async custom-element="amp-social-share" src="https://cdn.ampproject.org/v0/amp-social-share-0.1.js"></script>
 
-<script async custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script>
+<script async custom-element="amp-auto-ads" src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js"></script>
 
 
 <script async custom-element="amp-sidebar" src="https://cdn.ampproject.org/v0/amp-sidebar-0.1.js"></script>
@@ -106,29 +106,17 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 @media (max-width: 399px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:10px; }
 
-  .leftads {position:absolute;top:0;left:0;height:600px;width:0px;margin:0;align:right;}
-  .rightads {position:absolute;top:0;right:0;height:600px;width:0px;margin:0;}
-
 }
 @media (min-width: 400px) and (max-width: 499px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:20px; }
-
-  .leftads {position:absolute;top:0;left:0;height:600px;width:0px;margin:0;align:right;}
-  .rightads {position:absolute;top:0;right:0;height:600px;width:0px;margin:0;}
 
 }
 @media (min-width: 500px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:40px; }
 
-  .leftads {position:absolute;top:0;left:0;height:600px;width:0px;margin:0;align:right;}
-  .rightads {position:absolute;top:0;right:0;height:600px;width:0px;margin:0;}
-
 }
 @media (min-width: 1260px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:40px; }
-
-  .leftads {position:absolute;top:0;left:0;height:100vh;width: calc((100% - 1020px)/2);margin:0;align:right;}
-  .rightads {position:absolute;top:0;right:0;height:100vh;width: calc((100% - 1020px)/2);margin:0;}
 
 }
 
@@ -136,6 +124,8 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </head>
 
 <body>
+  
+  <amp-auto-ads type="adsense" data-ad-client="ca-pub-2242556057278004"></amp-auto-ads>
   
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -185,29 +175,6 @@ div.footer { font-size: 80%; color: red; text-align: center; }
     </div>
   </div>
   
-  <div class="leftads">
-  <!-- AMP Responsive Skyscrapper -->
-<amp-ad
-media="(min-width: 1260px)"
-layout="fill"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="5275186684">
-</amp-ad>
-
-  </div>
-  <div class="rightads">
-  <!-- AMP Responsive Skyscrapper -->
-<amp-ad
-media="(min-width: 1260px)"
-layout="fill"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="5275186684">
-</amp-ad>
-
-  </div>
-  
 
 <div class="body">
   <div>
@@ -226,10 +193,6 @@ data-ad-slot="5275186684">
   <p>Hẳn là những người có tiền tiết kiệm đang băn khoăn không biết sắp tới nên đưa tiền vào đâu trong tình hình lãi suất huy động vốn ở ngân hàng đang giảm dần.
   <br>Những người chưa có tiền tiết kiệm thì nên đọc bài <a href="tich-luy">tại sao cần phải tiết kiệm</a>.</p>
   <h2>Lý thuyết</h2>
-  <div class="flright">
-    <div class="right">Hình từ <a href="https://www.dreamstime.com/lngoc25_info" target='_blank'>dreamstime.com</a></div>
-    <amp-img alt="Investment growth wealth gold coins chart" src="/images/goldcoingrow.jpg" width="400" height="400" layout="responsive"></amp-img>
-  </div>
   <p>Tôi chia sẻ với các bạn những kiến thức tôi đã học được, gồm những ý chính sau:</p>
   <ol>
     <li>trong thời hạn dài thì bất động sản và cổ phiếu sinh lợi nhiều hơn gửi ngân hàng</li>
@@ -247,18 +210,13 @@ data-ad-slot="5275186684">
   <p>Khi đã xác định được mục tiêu là đầu tư cổ phiếu lâu dài để có lợi nhuận cao hơn gửi tiết kiệm ngân hàng rồi thì việc phải làm là <a href="tich-luy">tích luỹ</a> thật nhiều <b>cổ phiếu tốt</b> để 10-20-30 năm sau bán đi lấy tiền dùng. Với một số tiền nhất định, muốn có nhiều cổ phiếu hơn thì hãy mua vào khi giá cổ phiếu xuống.
   <br>Nhà đầu tư cần có đủ kiến thức để chọn được các cổ phiếu tốt. Cổ phiếu tốt là cổ phiếu của những công ty tốt nhưng giá chưa quá cao. Công ty tốt là công ty tăng trưởng tốt.</p>
 
-<!-- AMP display ads -->
-<amp-ad width="100vw" height="320"
-     type="adsense"
-     data-ad-client="ca-pub-2242556057278004"
-     data-ad-slot="4706617992"
-     data-auto-format="rspv"
-     data-full-width="">
-  <div overflow=""></div>
-</amp-ad>
 
 
   <h2>Thực tế</h2>
+  <div class="flright">
+    <div class="right">Hình từ <a href="https://www.dreamstime.com/lngoc25_info" target='_blank'>dreamstime.com</a></div>
+    <amp-img alt="Investment growth wealth gold coins chart" src="/images/goldcoingrow.jpg" width="400" height="400" layout="responsive"></amp-img>
+  </div>
   <p>Phần tiếp theo là kinh nghiệm thực tế của tôi để đối chiếu với những điều trên.<br>
   Tôi bắt đầu tham gia thị trường chứng khoán từ năm 2003, cho tới nay tôi vẫn tự xem mình không có đủ kiến thức về thị trường chứng khoán, nhưng tôi không chạy theo đám đông và không dùng vốn vay.
   <br>Tôi bắt đầu mua cổ phiếu CII từ năm 2002, giữ nguyên số lượng cổ phiếu đến khi CII lên sàn. Năm 2006 thì tôi bán gần hết để dùng tiền vào việc khác, lời 185%, từ 50 triệu đồng thu lại hơn 140 triệu đồng. Thời gian 2003-2006, tôi chỉ đưa thêm một ít tiền vào cổ phiếu trên sàn, mặc dù không chạy theo đám đông nhưng cũng không ít lần tâm lý dao động nên mua bán không đúng lúc và mua phải những cổ phiếu không tốt, đến năm 2006 thì tôi bán gần hết để dùng tiền vào việc khác. Kết quả của giai đoạn này lời khoảng 77%.
@@ -278,15 +236,6 @@ data-ad-slot="5275186684">
   <br>Đầu tư vào cổ phiếu và quỹ đầu tư trong nước còn nhắc nhở tôi <a href="/y-kien/dung-hang-viet-nam">dùng hàng Việt Nam</a>. Và tôi cũng biết ơn những người thường xuyên tiêu thụ sản phẩm Vinamilk, Kinh Đô, dùng dịch vụ ngân hàng Eximbank, những người đã đem lại lợi nhuận cho tôi.</p>
 
 
-<!-- AMP display ads -->
-<amp-ad width="100vw" height="320"
-     type="adsense"
-     data-ad-client="ca-pub-2242556057278004"
-     data-ad-slot="4706617992"
-     data-auto-format="rspv"
-     data-full-width="">
-  <div overflow=""></div>
-</amp-ad>
 
   <h2>Có nên đưa tiền vào thị trường chứng khoán Việt Nam lúc này không?</h2>
   <p>Mọi người đều muốn đưa tiền vào thị trường chứng khoán lúc giá cổ phiếu thấp nhất rồi nhìn nó lên giá. Nhưng bạn có biết chính xác lúc nào giá thấp nhất không? Nếu không biết thì hãy dùng phương pháp <a href="dau-tu-co-phieu/">bình quân giá cổ phiếu</a> để đưa tiền vào đầu tư thay vì ngồi đợi giá xuống thêm, lỡ giá không xuống thêm mà tăng lên thì có uổng không! Tham gia đầu tư định kỳ vào quỹ đầu tư là làm theo phương pháp bình quân giá cổ phiếu đó. Giá cổ phiếu có xuống, bạn lỗ ít hơn là đưa hết một đống tiền vào ngay một lúc. Giá cổ phiếu không tăng, bạn không bị lỗ.
@@ -316,15 +265,6 @@ data-ad-slot="5275186684">
   </div>
 
 
-<!-- AMP display ads -->
-<amp-ad width="100vw" height="320"
-     type="adsense"
-     data-ad-client="ca-pub-2242556057278004"
-     data-ad-slot="4706617992"
-     data-auto-format="rspv"
-     data-full-width="">
-  <div overflow=""></div>
-</amp-ad>
 
   <hr>
   <div class="footer">
