--- a/huu-ich/index.html
+++ b/huu-ich/index.html
@@ -193,8 +193,8 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h2>Ổn-định cuộc-sống và làm-giàu một cách chắc-chắn</h2>
   <div class="flright"><amp-img alt="Tự-do Tài-chính" src="/images/freedom1.jpg" width="282" height="172" layout="responsive"></amp-img></div>
   <p>Mọi-người đều cần và có-thể làm-giàu một cách chắc-chắn và dễ-dàng. Mỗi-người cần phải đủ giàu để có-thể <a href="tich-luy">ăn-xài suốt 30 năm cuối đời</a> mà không cần phải làm-việc để kiếm-tiến, vì lúc đó có muốn làm cũng không có đủ sức mà làm.
-  <br>Chúng-ta nên hiểu rõ thế-nào là giàu và từ-đó khẳng-định <a href="lam-giau-khong-kho">làm-giàu không khó</a>.</p>
-  <p><a href="../y-kien/su-giau-co">Có nhiều cách để trở-nên giàu-có</a>, nhưng đối-với <strong>đa-số</strong> người-thường trong xã-hội thì <strong>chỉ có một cách</strong> để trở-nên giàu-có là <a href="chi-tieu">chi-tiêu ít hơn số-tiền-kiếm-được</a> và tích-luỹ từ-từ.
+  <br>Chúng-ta nên hiểu rõ thế-nào là giàu và từ-đó khẳng-định <a href="lam-giau-khong-kho">làm-giàu không khó</a>.
+  <br style="clear:both"><a href="../y-kien/su-giau-co">Có nhiều cách để trở-nên giàu-có</a>, nhưng đối-với <strong>đa-số</strong> người-thường trong xã-hội thì <strong>chỉ có một cách</strong> để trở-nên giàu-có là <a href="chi-tieu">chi-tiêu ít hơn số-tiền-kiếm-được</a> và tích-luỹ từ-từ.
   <br>Đa-số người-thường trong xã-hội kiếm-tiền bằng cách bán-sức-lao-động (chân-tay hay trí-óc). Một số ít người biết cách-quản-lý-đồng-tiền, làm cho nó sinh-lợi nhanh thì làm chủ.
   <br>Tuỳ-theo tài-quản-lý của người-chủ, số-tiền tối-đa người đó có thể quản-lý để sinh-lợi rất khác nhau, số-tiền lớn quá mức đó sẽ không được sinh-lợi tốt, thậm chí có thể bị lỗ.
   <br>Ví-dụ: một người-chủ-tiệm-tạp-hoá quản-lý được một tiệm với số vốn một trăm triệu đồng, nếu giao cho người đó một tỷ đồng, người đó không-thể quản-lý tốt mười tiệm-tạp-hoá, sẽ làm thất-thoát và thua-lỗ.
