--- a/huu-ich/nghi-luc.html
+++ b/huu-ich/nghi-luc.html
@@ -15,7 +15,7 @@
 
 <script async custom-element="amp-social-share" src="https://cdn.ampproject.org/v0/amp-social-share-0.1.js"></script>
 
-<script async custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script>
+<script async custom-element="amp-auto-ads" src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js"></script>
 
 
 <script async custom-element="amp-sidebar" src="https://cdn.ampproject.org/v0/amp-sidebar-0.1.js"></script>
@@ -106,29 +106,17 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 @media (max-width: 399px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:10px; }
 
-  .leftads {position:absolute;top:0;left:0;height:600px;width:0px;margin:0;align:right;}
-  .rightads {position:absolute;top:0;right:0;height:600px;width:0px;margin:0;}
-
 }
 @media (min-width: 400px) and (max-width: 499px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:20px; }
-
-  .leftads {position:absolute;top:0;left:0;height:600px;width:0px;margin:0;align:right;}
-  .rightads {position:absolute;top:0;right:0;height:600px;width:0px;margin:0;}
 
 }
 @media (min-width: 500px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:40px; }
 
-  .leftads {position:absolute;top:0;left:0;height:600px;width:0px;margin:0;align:right;}
-  .rightads {position:absolute;top:0;right:0;height:600px;width:0px;margin:0;}
-
 }
 @media (min-width: 1260px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:40px; }
-
-  .leftads {position:absolute;top:0;left:0;height:100vh;width: calc((100% - 1020px)/2);margin:0;align:right;}
-  .rightads {position:absolute;top:0;right:0;height:100vh;width: calc((100% - 1020px)/2);margin:0;}
 
 }
 
@@ -136,6 +124,8 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </head>
 
 <body>
+  
+  <amp-auto-ads type="adsense" data-ad-client="ca-pub-2242556057278004"></amp-auto-ads>
   
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -185,29 +175,6 @@ div.footer { font-size: 80%; color: red; text-align: center; }
     </div>
   </div>
   
-  <div class="leftads">
-  <!-- AMP Responsive Skyscrapper -->
-<amp-ad
-media="(min-width: 1260px)"
-layout="fill"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="5275186684">
-</amp-ad>
-
-  </div>
-  <div class="rightads">
-  <!-- AMP Responsive Skyscrapper -->
-<amp-ad
-media="(min-width: 1260px)"
-layout="fill"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="5275186684">
-</amp-ad>
-
-  </div>
-  
 
   <div class="body">
   <div>
@@ -229,19 +196,10 @@ data-ad-slot="5275186684">
     <p>Sự giằng co đó cũng tồn tại trong vấn đề tài chính cá nhân, và chúng ta cần có nghị lực để lựa chọn đúng. Bạn không thể tạo nên sự giàu có khi bạn không có nghị lực để từ chối những thứ đem lại sự dễ chịu ngay trước mắt. Những sự lựa chọn đó là những nền tảng của việc làm giàu, và chúng đòi hỏi phải để thời gian lập kế hoạch ngân sách, từ bỏ những chi tiêu không cần thiết, và tiết kiệm đầu tư cho tuổi già.</p>
     <h2>Nghị lực để lập kế hoạch ngân sách</h2>
     <div class="flright"><amp-img alt="Ghi sổ" src="/images/bookkeeping.jpeg" width="1200" height="800" layout="responsive"></amp-img></div>
-    <p>Trong cuộc khảo sát năm 2019 của Debt.com, chỉ có 25% người đồng ý với việc "mọi người đều nên có kế hoạch ngân sách" trong khi kế hoạch ngân sách là điều quan trọng nhất để quản lý tiền được tốt, theo các chuyên gia tài chính cá nhân, vì bạn phải để tâm vào việc tiêu tiền trước khi bạn có thể thay đổi.</p>
-    <p>Thật không may là lập kế hoạch ngân sách thì rất chán. Và khi bạn chưa có một bộ công cụ thì bạn sẽ tốn rất nhiều thời gian để lập kế hoạch ngân sách. Bạn sẽ cảm thấy dễ dàng chọn ngồi xem phim thay vì dò lại những khoản chi tiêu.</p>
+    <p>Trong cuộc khảo sát năm 2019 của Debt.com, chỉ có 25% người đồng ý với việc "mọi người đều nên có kế hoạch ngân sách" trong khi kế hoạch ngân sách là điều quan trọng nhất để quản lý tiền được tốt, theo các chuyên gia tài chính cá nhân, vì bạn phải để tâm vào việc tiêu tiền trước khi bạn có thể thay đổi.
+    <br style="clear:both">Thật không may là lập kế hoạch ngân sách thì rất chán. Và khi bạn chưa có một bộ công cụ thì bạn sẽ tốn rất nhiều thời gian để lập kế hoạch ngân sách. Bạn sẽ cảm thấy dễ dàng chọn ngồi xem phim thay vì dò lại những khoản chi tiêu.</p>
     <p>Bạn có thể vượt qua khó khăn trong việc lập kế hoạch ngân sách bằng cách chia nhỏ việc đó. Thay vì cố gắng làm hết trong một lần, bạn để mỗi ngày 15 phút để làm dần. Bắt đầu bằng việc ghi thu nhập, tiếp theo là xem lại những giao dịch qua tài khoản, phân loại chúng thành nhóm quan trọng, nhóm không quan trọng, nhóm trả nợ. Sau đó, bạn sẽ xem kỹ nhóm không quan trọng xem bạn có thể thay đổi được gì.</p>
 
-<!-- AMP display ads -->
-<amp-ad width="100vw" height="320"
-     type="adsense"
-     data-ad-client="ca-pub-2242556057278004"
-     data-ad-slot="4706617992"
-     data-auto-format="rspv"
-     data-full-width="">
-  <div overflow=""></div>
-</amp-ad>
 
     <h2>Nghị lực để giảm chi tiêu</h2>
     <p>Khi đã lập kế hoạch ngân sách xong, bạn phải thực hiện nó. Việc này đòi hỏi bạn phải có nghị lực để từ chối những cám dỗ chi tiêu. Đây là một mẹo cho bạn. Sự cám dỗ hưởng thụ tức thời thì mạnh nhất khi nó mới vừa xuất hiện. Bạn đi ngang tiệm cafe Starbucks, và đột nhiên bạn muốn mua một ly cafe 6$. Nhưng nếu bạn đi tiếp thì chỉ vài phút sau là bạn sẽ không còn bị cám dỗ.</p>
@@ -255,15 +213,6 @@ data-ad-slot="5275186684">
       <br>* <a href="ke-hoach-tai-chinh/">Lập kế hoạch ổn định tài chính suốt đời thật đơn giản</a>
     </div>
 
-<!-- AMP display ads -->
-<amp-ad width="100vw" height="320"
-     type="adsense"
-     data-ad-client="ca-pub-2242556057278004"
-     data-ad-slot="4706617992"
-     data-auto-format="rspv"
-     data-full-width="">
-  <div overflow=""></div>
-</amp-ad>
 
   <hr>
   <div class="footer">
