--- a/kinh-nghiem/linh-tinh/dien-standby.html
+++ b/kinh-nghiem/linh-tinh/dien-standby.html
@@ -15,7 +15,7 @@
 
 <script async custom-element="amp-social-share" src="https://cdn.ampproject.org/v0/amp-social-share-0.1.js"></script>
 
-<script async custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script>
+<script async custom-element="amp-auto-ads" src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js"></script>
 
 
 <script async custom-element="amp-sidebar" src="https://cdn.ampproject.org/v0/amp-sidebar-0.1.js"></script>
@@ -106,29 +106,17 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 @media (max-width: 399px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:10px; }
 
-  .leftads {position:absolute;top:0;left:0;height:600px;width:0px;margin:0;align:right;}
-  .rightads {position:absolute;top:0;right:0;height:600px;width:0px;margin:0;}
-
 }
 @media (min-width: 400px) and (max-width: 499px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:20px; }
-
-  .leftads {position:absolute;top:0;left:0;height:600px;width:0px;margin:0;align:right;}
-  .rightads {position:absolute;top:0;right:0;height:600px;width:0px;margin:0;}
 
 }
 @media (min-width: 500px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:40px; }
 
-  .leftads {position:absolute;top:0;left:0;height:600px;width:0px;margin:0;align:right;}
-  .rightads {position:absolute;top:0;right:0;height:600px;width:0px;margin:0;}
-
 }
 @media (min-width: 1260px) {
   .mbutton { display:inline;float:left;padding-top:7px;padding-right:40px; }
-
-  .leftads {position:absolute;top:0;left:0;height:100vh;width: calc((100% - 1020px)/2);margin:0;align:right;}
-  .rightads {position:absolute;top:0;right:0;height:100vh;width: calc((100% - 1020px)/2);margin:0;}
 
 }
 
@@ -136,6 +124,8 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </head>
 
 <body>
+  
+  <amp-auto-ads type="adsense" data-ad-client="ca-pub-2242556057278004"></amp-auto-ads>
   
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -185,29 +175,6 @@ div.footer { font-size: 80%; color: red; text-align: center; }
     </div>
   </div>
   
-  <div class="leftads">
-  <!-- AMP Responsive Skyscrapper -->
-<amp-ad
-media="(min-width: 1260px)"
-layout="fill"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="5275186684">
-</amp-ad>
-
-  </div>
-  <div class="rightads">
-  <!-- AMP Responsive Skyscrapper -->
-<amp-ad
-media="(min-width: 1260px)"
-layout="fill"
-type="adsense"
-data-ad-client="ca-pub-2242556057278004"
-data-ad-slot="5275186684">
-</amp-ad>
-
-  </div>
-  
 
   <div class="body">
   <div>
@@ -229,19 +196,10 @@ data-ad-slot="5275186684">
   <div class="flright"><amp-img src="/images/powermeter.jpg" width="225" height="225" layout="responsive"></amp-img>
   </div>
   <p>Chúng ta vẫn thường nghe nhắc tiết kiệm điện bằng cách rút/tắt các thiết bị điện khi không dùng, một số lời khuyên còn nói nên rút hẳn các thiết bị điện tử ở chế độ standby. Tôi cũng nghe những lời khuyên đó và từ lâu đã thực hành ở mức độ tắt đèn, quạt, máy nước nóng, TV, máy lạnh khi không dùng. Trước đây, tôi chưa rút hẳn thiết bị điện tử standby vì nghĩ rằng nhà sản xuất thiết bị đã giảm tiêu hao điện đến mức không đáng kể.  
-  Gần đây, tôi mua một cái đồng hồ <a href="tieu-thu-dien">đo công suất tiêu thụ điện</a> giống như trong hình bên và thấy rằng lượng điện tiêu thụ standby 24/7 rất đáng kể.</p>
-  <p>Tôi tính ra rằng (và đã áp dụng hơn 2 tháng rồi) rút/ngắt hẳn ngay sau mỗi lần dùng những thiết bị gồm có 1 TV 32", 1 settop box, 1 dàn âm thanh, 1 máy giặt, 1 nồi cơm điện, 1 lò microwave, 2 bếp điện từ, 1 máy tính để bàn, 1 Wifi router, 1 UPS, 3 máy lạnh, vài cục sạc điện thoại thì mỗi ngày bớt tiêu phí 2kWh, tính ở bậc giá điện thứ 4 mỗi tháng giảm được khoảng 150 ngàn đồng. Thật ngạc nhiên hơn nữa, lượng điện dùng để nấu cơm và thức ăn mỗi ngày còn ít hơn 2kWh (nhà tôi không dùng bếp ga vì <a href="bep">dùng bếp ga tốn nhiều tiền hơn bếp điện từ</a>)! Nếu nhà có nhiều đồ standby hơn và tính theo bậc giá điện thứ 6 thì số tiền tiết kiệm được phải hơn 200 ngàn đồng mỗi tháng.</p>
+  Gần đây, tôi mua một cái đồng hồ <a href="tieu-thu-dien">đo công suất tiêu thụ điện</a> giống như trong hình bên và thấy rằng lượng điện tiêu thụ standby 24/7 rất đáng kể.
+  <br style="clear:both">Tôi tính ra rằng (và đã áp dụng hơn 2 tháng rồi) rút/ngắt hẳn ngay sau mỗi lần dùng những thiết bị gồm có 1 TV 32", 1 settop box, 1 dàn âm thanh, 1 máy giặt, 1 nồi cơm điện, 1 lò microwave, 2 bếp điện từ, 1 máy tính để bàn, 1 Wifi router, 1 UPS, 3 máy lạnh, vài cục sạc điện thoại thì mỗi ngày bớt tiêu phí 2kWh, tính ở bậc giá điện thứ 4 mỗi tháng giảm được khoảng 150 ngàn đồng. Thật ngạc nhiên hơn nữa, lượng điện dùng để nấu cơm và thức ăn mỗi ngày còn ít hơn 2kWh (nhà tôi không dùng bếp ga vì <a href="bep">dùng bếp ga tốn nhiều tiền hơn bếp điện từ</a>)! Nếu nhà có nhiều đồ standby hơn và tính theo bậc giá điện thứ 6 thì số tiền tiết kiệm được phải hơn 200 ngàn đồng mỗi tháng.</p>
   <p>Cả nước có hơn 24 triệu gia đình, giả sử mỗi tháng mỗi gia đình tiết kiệm trung bình 30 ngàn đồng tiền điện standby thì cả nước tiết kiệm 720 tỉ đồng, cả năm là 8.640 tỉ đồng (đủ xây 5-6 bệnh viện). Chỉ riêng phần điện sinh hoạt mà có thể tiết kiệm được nhiều như vậy, thử tính thêm điện dùng trong các văn phòng cho khoảng chục triệu máy tính, máy in, máy nước nóng-lạnh, máy lạnh standby nữa thì tiền tiết kiệm đủ xây 10 bệnh viện mỗi năm. Đó là số tiền đã trả cho EVN mua than về đốt nóng Trái Đất và thải khí độc ở Việt Nam. Trái Đất bớt nóng thì mỗi nhà lại tiết kiệm thêm tiền điện chạy quạt/máy lạnh, nhà nước đỡ phải chạy máy bơm chống ngập. Như vậy có phải rằng người Việt Nam đang đốt bỏ 10 bệnh viện mỗi năm không?</p>
 
-<!-- AMP display ads -->
-<amp-ad width="100vw" height="320"
-     type="adsense"
-     data-ad-client="ca-pub-2242556057278004"
-     data-ad-slot="4706617992"
-     data-auto-format="rspv"
-     data-full-width="">
-  <div overflow=""></div>
-</amp-ad>
 
   <p>Để đỡ mất công rút và cắm điện thì tôi dùng những ổ cắm nối dài có công-tắc ngắt điện giống như các hình dưới đây, khi dùng xong thì bấm công-tắc để ngắt hẳn điện khỏi thiết bị. Nếu bạn chuẩn bị lắp mới những ổ cắm trên tường thì nên làm luôn công-tắc bên cạnh để tắt mỗi ổ cắm hay mỗi nhóm ổ cắm.</p>
   <div>
@@ -266,15 +224,6 @@ data-ad-slot="5275186684">
   </div>
 
 
-<!-- AMP display ads -->
-<amp-ad width="100vw" height="320"
-     type="adsense"
-     data-ad-client="ca-pub-2242556057278004"
-     data-ad-slot="4706617992"
-     data-auto-format="rspv"
-     data-full-width="">
-  <div overflow=""></div>
-</amp-ad>
 
   <hr>
   <div class="footer">
