--- a/kinh-nghiem/may-tinh/index.html
+++ b/kinh-nghiem/may-tinh/index.html
@@ -188,7 +188,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <h1>Những kinh-nghiệm khi dùng máy-tính, điện-thoại</h1>
 <dl>
   <dt><a href='protect'>Bảo-vệ tài-sản-số-hoá</a></dt>
-  <dd>Bảo vệ tài sản trong thời đại số hoá: : tránh hư hoặc mất các file, tránh lộ hoặc quên các password, bảo vệ các tài khoản bằng nhiều yếu tố.</dd>
+  <dd>Bảo vệ tài sản trong thời đại số hoá: tránh hư hoặc mất các file, tránh lộ hoặc quên các password, bảo vệ các tài khoản bằng nhiều yếu tố.</dd>
   <dt><a href='cloudstorage'>Kinh-nghiệm dùng cloud storage</a></dt>
   <dd>Giữ file trong nhiều máy và nhiều Cloud Storage sao cho an toàn và không bị rối loạn.</dd>
   <dt><a href='privcloudstor'>Hướng-dẫn làm cloud storage server</a></dt>
@@ -230,7 +230,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <dt><a href='linux'>Vài kinh nghiệm dùng máy Linux</a></dt>
   <dd>Một vài kinh nghiệm dùng máy Linux: kernel, RAID, LVM, file system</dd>
   <dt><a href='toys'>Home server cũ</a></dt>
-  <dd>"Một server nhiều dịch vụ trong gia đình: chuẩn đồng hồ, trả lời điện thoại và nhận tin nhắn…</dd>
+  <dd>Một server nhiều dịch vụ trong gia đình: đồng hồ chính xác, trả lời điện thoại và nhận tin nhắn…</dd>
   <dt><a href='oss'>Phần-mềm-mã-nguồn-mở</a></dt>
   <dd>Phần mềm mã nguồn mở làm được những gì?</dd>
   <dt><a href='phan-mem-tu-do'>Phần-mềm-tự-do</a></dt>
