--- a/sitemap.html
+++ b/sitemap.html
@@ -230,6 +230,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
     <h4 class="myheader"><a href='/kinh-nghiem/linh-tinh/'>Linh tinh</a></h4>
 
+      <a href="/kinh-nghiem/linh-tinh/can-biet">Những điều NÊN và KHÔNG NÊN trong thời Internet</a><br>
       <a href='/kinh-nghiem/linh-tinh/bep'>So sánh chi phí giữa dùng bếp ga-bếp điện cảm ứng-lò microwave</a><br>
       <a href='/kinh-nghiem/linh-tinh/ac-dc'>Điện một chiều và điện xoay chiều</a><br>
       <a href='/kinh-nghiem/linh-tinh/tieu-thu-dien'>Đo công suất tiêu thụ điện một số máy nhỏ thường gặp</a><br>
