--- a/kinh-nghiem/linh-tinh/can-biet.html
+++ b/kinh-nghiem/linh-tinh/can-biet.html
@@ -2,9 +2,9 @@
 <html amp lang="vi">
 <head>
 <title>Những điều NÊN và KHÔNG NÊN trong thời Internet</title>
-<meta name="description" content="Những điều cần biết trong thời Internet để giảm bớt rủi ro" />
-<meta name="keywords" content="hữu ích, tài chính, cá nhân">
-<link rel="canonical" href="https://lehboi.github.io/">
+<meta name="description" content="Những điều NÊN và KHÔNG NÊN trong thời Internet để tăng lợi ích và giảm bớt rủi ro" />
+<meta name="keywords" content="hữu ích, rủi ro, cá nhân, tài khoản, tiện lợi">
+<link rel="canonical" href="https://lehboi.github.io/kinh-nghiem/linh-tinh/can-biet">
 
 <!-- in head of html file -->
 <meta charset='utf-8'>
