--- a/kinh-nghiem/linh-tinh/can-biet.html
+++ b/kinh-nghiem/linh-tinh/can-biet.html
@@ -3,7 +3,7 @@
 <head>
 <title>Những điều NÊN và KHÔNG NÊN trong thời Internet</title>
 <meta name="description" content="Những điều NÊN và KHÔNG NÊN trong thời Internet để tăng lợi ích và giảm bớt rủi ro" />
-<meta name="keywords" content="hữu ích, rủi ro, cá nhân, tài khoản, tiện lợi">
+<meta name="keywords" content="cẩm nang, hữu ích, rủi ro, cá nhân, tài khoản, tiện lợi">
 <link rel="canonical" href="https://lehboi.github.io/kinh-nghiem/linh-tinh/can-biet">
 
 <!-- in head of html file -->
@@ -253,7 +253,8 @@ Những điều dưới đây cũng có thể đúng với smartphone iOS.
 <br>Trong đại dịch Covid-19, việc giãn cách xã hội làm cho smartphone rất cần thiết đối với mỗi người. Tuỳ theo khả năng, bạn có thể chọn smartphone giá từ một triệu đồng trở lên để có thể tận dụng được những lợi ích của nó.
 <dl>
 <dt>NÊN ghi thông tin cấp cứu của bạn vào mục <i>Emergency information</i> trong <i>Settings</i></dt>
-<dd><div class="flright"><amp-img alt="Emergency information" src="/images/emergency.jpg" width="1077" height="1710" layout="responsive"></amp-img></div>Thông tin cấp cứu gồm có tên, địa chỉ, nhóm máu, các chất dị ứng, các bệnh mãn tính, số điện thoại của những người thân nhất. Khi bạn bị bất tỉnh nơi công cộng, được người lạ đưa đi cấp cứu, nhân viên y tế có thể đọc được những thông tin cấp cứu đó bằng cách bấm vào chữ Emergency trong màn hình máy đang bị khoá. Với những thông tin đó, việc cấp cứu sẽ nhanh hơn.</dd>
+<dd><div class="flright"><amp-img alt="Emergency information" src="/images/emergency.jpg" width="1077" height="1710" layout="responsive"></amp-img></div>Thông tin cấp cứu gồm có tên, địa chỉ, nhóm máu, các chất dị ứng, các bệnh mãn tính, số điện thoại của những người thân nhất. Khi bạn bị bất tỉnh nơi công cộng, được người lạ đưa đi cấp cứu, nhân viên y tế có thể đọc được những thông tin cấp cứu đó bằng cách bấm vào chữ Emergency trong màn hình máy đang bị khoá. Với những thông tin đó, việc cấp cứu sẽ nhanh hơn.
+<br>Khi bạn gặp một người đang bất tỉnh, bạn cũng NÊN thử tìm thông tin cấp cứu trong smartphone của người đó và gọi cho người thân của người đó.</dd>
 <dt>KHÔNG NÊN tắt các app đã dùng xong</dt>
 <dd>Các app đã dùng xong vẫn xuất hiện khi bạn chọn chức năng chuyển màn hình giữa các app, sự xuất hiện đó có hơi làm rối mắt bạn. Tuy nhiên những app đó không thật sự chạy và không làm hao pin hay hao lưu lượng Internet, bạn không cần tắt chúng. Đó là nhờ sự kiểm soát của hệ điều hành Android. Ngược lại, nếu bạn tắt chúng thì bạn có thể bị hao pin hơn khi bạn cần dùng app đó lần nữa vì Android phải đọc lại app đó từ flash storage vào RAM.</dd>
 <dt>NÊN rất cẩn thận khi cài thêm app vào máy</dt>
@@ -321,6 +322,8 @@ Bạn phải <b>vô cùng</b> cẩn thận với tài khoản tiền của bạn
 <dt>NÊN cẩn thận khi cho người trong Internet mượn tiền</dt>
 <dd>Người trong Internet có thể đã từng là người thân, người quen mà bạn biết rất rõ, nhưng một hôm người đó bị mất quyền kiểm soát tài khoản dịch vụ online của họ và kẻ gian dùng tài khoản đó để hỏi vay tiền hoặc nhờ mua mã số nạp điện thoại. Gặp trường hợp như vậy, bạn cần liên lạc bằng giọng nói (qua OTT app hoặc điện thoại) với người trong Internet để hỏi cho rõ tình hình, kẻ gian sẽ không dám trả lời bằng giọng nói.</dd>
 </dl>
+<div class="todiscuss">
+Mọi ý kiến thảo luận xin ghi vào trang: <a href="https://www.facebook.com/boi.hong.le/posts/4510442482381400" target="_blank">Facebook</a></div>
   <hr>
   <div class="footer">
   Bấm các nút sau để liên-lạc 
