--- a/kinh-nghiem/linh-tinh/can-biet.html
+++ b/kinh-nghiem/linh-tinh/can-biet.html
@@ -224,7 +224,7 @@ data-ad-slot="5275186684">
   </div>
 
     <h1>Những điều NÊN và KHÔNG NÊN trong thời Internet</h1>
-<div class="right">Viết lần đầu trong Tháng Mười Một, 2020.</div>
+<div class="right">Viết lần đầu trong Tháng Mười Một, 2021.</div>
 <!-- body here -->
 Thời đại Internet có nhiều dịch vụ tiện lợi mới xuất hiện, kèm theo rủi ro khi dùng những dịch vụ đó. Mỗi người cần biết những điều sau đây để tránh rủi ro.
 <br>Những dịch vụ mới phát triển rất nhanh và liên quan đến những điều rất quan trọng của mỗi người, đó là sự an toàn và tài sản. Vì vậy mỗi người hãy cố gắng hiểu được những dịch vụ đó để thêm lợi ích và bớt rủi ro. Những người ít tiếp xúc với máy móc thì cần để đầu óc mở rộng, kiên nhẫn tìm hiểu từng dịch vụ.
@@ -271,7 +271,7 @@ Những điều dưới đây cũng có thể đúng với smartphone iOS.
 <dd>Người thân sẽ yên tâm khi biết bạn đang ở đâu mọi lúc. Cách làm được viết trong trang <a href="/kinh-nghiem/may-tinh/googlemaps">Kinh-nghiệm dùng Google Maps</a>.</dd>
 <dt>NÊN dùng smartphone để học ngoại ngữ</dt>
 <dd>Học ngoại ngữ rất có ích cho cuộc sống của mỗi người. Ngoại ngữ giúp chúng ta tiếp thu thêm kiến thức. Học ngoại ngữ đều đặn giúp bộ não khoẻ mạnh. <a href="https://www.duolingo.com/info" target='_blank'>Duolingo</a> là một trong những app để học ngoại ngữ mọi lúc, mọi nơi với smartphone.</dd>
-<dt>NÊN dùng smartphone để kiểm soát sức khoẻ</dt>
+<dt>NÊN dùng smartphone để theo dõi sức khoẻ</dt>
 <dd>Smartphone giúp chúng ta ghi lại hồ sơ sức khoẻ lâu dài để có thể xem lại. Một số thông tin liên quan đến sức khoẻ được ghi một cách tự động như là số bước đi, thời gian ngủ. Một số thông tin khác cần phải chủ động ghi vào như là huyết áp, đường huyết…
 <br>App <a href="https://play.google.com/store/apps/details?id=com.google.android.apps.fitness" target='_blank'>Google Fit</a> có thể tự động ghi số bước đi của bạn. App <a href="https://play.google.com/store/apps/details?id=com.urbandroid.sleep" target='_blank'>Sleep as Android</a> có thể ghi lại chất lượng giấc ngủ của bạn. Bạn có thể ghi huyết áp, chỉ số đường huyết, cân nặng, tiền sử bệnh vào app <a href="https://play.google.com/store/apps/details?id=com.mohviettel.sskdt" target='_blank'>Sổ sức khoẻ điện tử</a>.</dd>
 <dt>NÊN cài app hiện tên của số điện thoại lạ</dt>
@@ -320,7 +320,8 @@ Bạn phải <b>vô cùng</b> cẩn thận với tài khoản tiền của bạn
 <dt>NÊN bảo vệ các tài khoản của bạn thật cẩn thận</dt>
 <dd>Cách bảo vệ được viết chi tiết trong trang web <a href="https://lehboi.github.io/kinh-nghiem/may-tinh/protect" target='_blank'>Bảo-vệ tài-sản-số-hoá</a>.</dd>
 <dt>NÊN cẩn thận khi cho người trong Internet mượn tiền</dt>
-<dd>Người trong Internet có thể đã từng là người thân, người quen mà bạn biết rất rõ, nhưng một hôm người đó bị mất quyền kiểm soát tài khoản dịch vụ online của họ và kẻ gian dùng tài khoản đó để hỏi vay tiền hoặc nhờ mua mã số nạp điện thoại. Gặp trường hợp như vậy, bạn cần liên lạc bằng giọng nói (qua OTT app hoặc điện thoại) với người trong Internet để hỏi cho rõ tình hình, kẻ gian sẽ không dám trả lời bằng giọng nói.</dd>
+<dd>Người trong Internet có thể đã từng là người thân, người quen mà bạn biết rất rõ, nhưng một hôm người đó bị mất quyền kiểm soát tài khoản dịch vụ online của họ và kẻ gian dùng tài khoản đó để hỏi vay tiền hoặc nhờ mua mã số nạp điện thoại. Gặp trường hợp như vậy, bạn cần liên lạc bằng giọng nói (qua OTT app hoặc điện thoại) với người trong Internet để hỏi cho rõ tình hình, kẻ gian sẽ không dám trả lời bằng giọng nói.
+<br>Một kiểu người trong Internet khác là người gửi tặng bạn một món quà rất có giá trị mà bạn cần phải chi một số tiền kha khá trước khi nhận được quà.</dd>
 </dl>
 <div class="todiscuss">
 Mọi ý kiến thảo luận xin ghi vào trang: <a href="https://www.facebook.com/boi.hong.le/posts/4510442482381400" target="_blank">Facebook</a></div>
