--- a/kinh-nghiem/linh-tinh/can-biet.html
+++ b/kinh-nghiem/linh-tinh/can-biet.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Những điều NÊN và KHÔNG NÊN trong thời Internet</title>
-<meta name="description" content="Những điều NÊN và KHÔNG NÊN trong thời Internet để tăng lợi ích và giảm bớt rủi ro" />
+<title>Những điều NÊN và KHÔNG NÊN làm trong thời Internet</title>
+<meta name="description" content="Những điều NÊN và KHÔNG NÊN làm trong thời Internet để tăng lợi ích và giảm bớt rủi ro" />
 <meta name="keywords" content="cẩm nang, hữu ích, rủi ro, cá nhân, tài khoản, tiện lợi">
 <link rel="canonical" href="https://lehboi.github.io/kinh-nghiem/linh-tinh/can-biet">
 
@@ -223,7 +223,7 @@ data-ad-slot="5275186684">
     <amp-social-share type="email" height="32"></amp-social-share>
   </div>
 
-    <h1>Những điều NÊN và KHÔNG NÊN trong thời Internet</h1>
+    <h1>Những điều NÊN và KHÔNG NÊN làm trong thời Internet</h1>
 <div class="right">Viết lần đầu trong Tháng Mười Một, 2021.</div>
 <!-- body here -->
 Thời đại Internet có nhiều dịch vụ tiện lợi mới xuất hiện, kèm theo rủi ro khi dùng những dịch vụ đó. Mỗi người cần biết những điều sau đây để tránh rủi ro.
@@ -232,14 +232,16 @@ Thời đại Internet có nhiều dịch vụ tiện lợi mới xuất hiện,
 <h2>Khi dùng điện thoại di động</h2>
 <dl>
 <dt>KHÔNG NÊN gọi lại những cuộc gọi lỡ từ số lạ</dt>
-<dd>Nếu người gọi thật sự cần liên lạc với bạn, họ sẽ gọi lại hoặc nhắn tin. Bạn không cần phải gọi đến số mà bạn không biết. Và bạn cũng nên tập thói quen <a href="/kinh-nghiem/may-tinh/OTT-apps">nhắn tin sau khi gọi một người lạ mà không được trả lời</a>.</dd>
+<dd>Nếu người gọi thật sự cần liên lạc với bạn, họ sẽ gọi lại hoặc nhắn tin. Trừ khi bạn đang có thứ gì để bán, bạn không cần phải gọi đến số mà bạn không biết. Và bạn cũng nên tập thói quen <a href="/kinh-nghiem/may-tinh/OTT-apps">nhắn tin sau khi gọi một người lạ mà không được trả lời</a>.</dd>
+<dt>KHÔNG NÊN lo sợ khi bị doạ có thư khởi tố hay bắt giam</dt>
+<dd>Gọi điện thoại thông báo khởi tố hay bắt giam chỉ là trò lừa đảo để người nghe lo sợ rồi giao tiền cho công an giả giữ giùm.</dd>
 </dl>
 <h3>Nạp tiền điện thoại trả trước</h3>
 <dl>
 <dt>NÊN nạp tiền bằng các app ngân hàng, app thương mại điện tử, app ví điện tử.</dt>
 <dd>Nạp tiền theo cách này rất tiện, tài khoản điện thoại nhận được tiền ngay khi nạp và được chiết khấu 4%.</dd>
 <dt>KHÔNG NÊN mua mã số nạp tiền</dt>
-<dd>Vì mua xong mất thời gian để nạp, nếu không nạp ngay có thể bị lạc mất. Càng không nên mua thẻ cào để nạp, vì mất thêm thời gian mua và có thể cào hư thẻ nạp.</dd>
+<dd>Vì mua xong mất thời gian để nạp, nếu không nạp ngay có thể bị lạc mất. Càng không nên mua thẻ cào để nạp, vì mất thêm thời gian mua và có thể cào hư thẻ.</dd>
 </dl>
 <h3>Các dịch vụ cộng thêm</h3>
 <dl>
