--- a/kinh-nghiem/linh-tinh/can-biet.html
+++ b/kinh-nghiem/linh-tinh/can-biet.html
@@ -14,7 +14,6 @@
 
 <script async custom-element="amp-social-share" src="https://cdn.ampproject.org/v0/amp-social-share-0.1.js"></script>
 
-<script async custom-element="amp-auto-ads" src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js"></script>
 <script async custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script>
 
 
@@ -137,8 +136,6 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
 <body>
   
-  <amp-auto-ads type="adsense" data-ad-client="ca-pub-2242556057278004"></amp-auto-ads>
-  
   <!-- top of body -->
   <!-- sidebar menu -->
   <amp-sidebar id="sidebar" layout="nodisplay" side="left">
@@ -228,8 +225,15 @@ data-ad-slot="5275186684">
 <!-- body here -->
 Thời đại Internet có nhiều dịch vụ tiện lợi mới xuất hiện, kèm theo rủi ro khi dùng những dịch vụ đó. Mỗi người cần biết những điều sau đây để tránh rủi ro.
 <br>Những dịch vụ mới phát triển rất nhanh và liên quan đến những điều rất quan trọng của mỗi người, đó là sự an toàn và tài sản. Vì vậy mỗi người hãy cố gắng hiểu được những dịch vụ đó để thêm lợi ích và bớt rủi ro. Những người ít tiếp xúc với máy móc thì cần để đầu óc mở rộng, kiên nhẫn tìm hiểu từng dịch vụ.
-
-<h2>Khi dùng điện thoại di động</h2>
+<br>Bạn có thể bấm vào từng link sau đây để xem từng loại dịch vụ:
+<ul>
+<li><a href="#dtdd">Điện thoại di động</a></li>
+<li><a href="#smartphone">Smartphone</a></li>
+<li><a href="#tknh">Tài khoản ngân hàng</a></li>
+<li><a href="#shop">Mua hàng từ xa</a></li>
+<li><a href="#online">Các dịch vụ online</a></li>
+</ul>
+<h2 id="dtdd">Khi dùng điện thoại di động</h2>
 <dl>
 <dt>KHÔNG NÊN gọi lại những cuộc gọi lỡ từ số lạ</dt>
 <dd>Nếu người gọi thật sự cần liên lạc với bạn, họ sẽ gọi lại hoặc nhắn tin. Trừ khi bạn đang có thứ gì để bán, bạn không cần phải gọi đến số mà bạn không biết. Và bạn cũng nên tập thói quen <a href="/kinh-nghiem/may-tinh/OTT-apps">nhắn tin sau khi gọi một người lạ mà không được trả lời</a>.</dd>
@@ -250,7 +254,19 @@ Thời đại Internet có nhiều dịch vụ tiện lợi mới xuất hiện,
 <dt>NÊN thường xuyên kiểm tra các dịch vụ cộng thêm đang phải trả tiền.</dt>
 <dd>Các công ty dịch vụ điện thoại di động rất thường gửi SMS mời chủ thuê bao dùng các dịch vụ cộng thêm. Có một số dịch vụ cộng thêm có ích như được liệt kê trong trang web <a href="/kinh-nghiem/may-tinh/tien-ich-di-dong">Tiện ích di động</a>, ngoài ra có rất nhiều dịch vụ không có ích như nhận tin tức, nhận kết quả xổ số… Dù có ích hay không có ích thì chủ thuê bao trả trước sẽ rất dễ quên rằng đang trả tiền cho dịch vụ nào. Hậu quả là tài khoản bị trừ tiền đều đặn cho những dịch vụ không cần dùng đến. Trong trang Tiện ích di động vừa nêu cũng có ghi cách kiểm tra các dịch vụ cộng thêm đang phải trả tiền.</dd>
 </dl>
-<h3>Smartphone Android</h3>
+
+
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
+</amp-ad>
+
+<h2 id="smartphone">Smartphone Android</h2>
 Những điều dưới đây cũng có thể đúng với smartphone iOS.
 <br>Trong đại dịch Covid-19, việc giãn cách xã hội làm cho smartphone rất cần thiết đối với mỗi người. Tuỳ theo khả năng, bạn có thể chọn smartphone giá từ một triệu đồng trở lên để có thể tận dụng được những lợi ích của nó.
 <dl>
@@ -282,7 +298,17 @@ Những điều dưới đây cũng có thể đúng với smartphone iOS.
 <dd>Người dùng smartphone Android được cài những app không làm thay đổi các thông số quan trọng của hệ điều hành. Để thay đổi các thông số quan trọng đó, các app cần quyền đặc biệt mà Android không cho, và nhiều người root máy để có quyền đặc biệt đó. Máy đã root có nguy cơ mất an toàn khi cài nhằm những app chuyên ăn cắp thông tin trong máy, nhất là những thông tin về tài khoản và mật khẩu.</dd>
 </dl>
 
-<h2>Khi dùng tài khoản ngân hàng</h2>
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
+</amp-ad>
+
+<h2 id="tknh">Khi dùng tài khoản ngân hàng</h2>
 <dl>
 <dt>NÊN có tài khoản thanh toán</dt>
 <dd>Chỉ cần có thẻ căn cước hoặc thẻ chứng minh nhân dân là đủ điều kiện mở tài khoản thanh toán, không cần sổ hộ khẩu hay tạm trú gì cả. Có tài khoản thanh toán, bạn sẽ thêm được nhiều tiện nghi khác: thẻ thanh toán để mua sắm không cần tiền mặt, chuyển tiền nhanh và sạch sẽ, dùng app ngân hàng để nạp tiền điện thoại trả trước, trả tiền điện-nước, dùng app thương mại điện tử, dùng <a href="/kinh-nghiem/may-tinh/vi-dien-tu">ví-điện-tử</a>, dùng <a href="/huu-ich/dau-tu-co-phieu/quy-dau-tu">quỹ đầu tư</a>… Giảm dùng tiền mặt sẽ giúp bạn kiểm soát chi tiêu dễ hơn và giảm lây nhiễm vi khuẩn hay virus.
@@ -309,7 +335,17 @@ Bạn phải <b>vô cùng</b> cẩn thận với tài khoản tiền của bạn
 <dd>Khi những chữ và số in trên mặt thẻ của bạn bị lộ, nó có thể bị kẻ gian dùng để mua hàng qua Internet mà người trả tiền là bạn. Việc bị lộ có thể xảy ra khi bạn thanh toán bằng thẻ trực tiếp hoặc thanh toán ở một website rồi website đó bị lộ. Khi thấy có một giao dịch bất thường xảy ra, bạn hãy khoá thẻ ngay lập tức. Cách khoá thẻ nhanh nhất là dùng app của ngân hàng phát hành thẻ, cách này nhanh hơn là gọi điện thoại đến ngân hàng vì tổng đài của các ngân hàng thường rất bận.
 </dl>
 
-<h2>Khi mua hàng từ xa</h2>
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
+</amp-ad>
+
+<h2 id="shop">Khi mua hàng từ xa</h2>
 <dl>
 <dt>NÊN cẩn thận với những món hàng quá rẻ</dt>
 <dd>Món hàng quá rẻ thì chất lượng kém, hoặc người bán hàng có ý lừa lấy tiền mà không giao hàng.</dd>
@@ -317,16 +353,27 @@ Bạn phải <b>vô cùng</b> cẩn thận với tài khoản tiền của bạn
 <dd>Phải tìm hiểu về mức độ tin cậy của website đó bằng cách dùng search engine với chữ <b>scam</b>.</dd>
 </dl>
 
-<h2>Khi dùng các dịch vụ online</h2>
+<h2 id="online">Khi dùng các dịch vụ online</h2>
 <dl>
 <dt>NÊN bảo vệ các tài khoản của bạn thật cẩn thận</dt>
-<dd>Cách bảo vệ được viết chi tiết trong trang web <a href="https://lehboi.github.io/kinh-nghiem/may-tinh/protect" target='_blank'>Bảo-vệ tài-sản-số-hoá</a>.</dd>
+<dd>Các tài khoản email có thể liên quan đến các dịch vụ ngân hàng và tài chính, cần được giữ thật kỹ. NÊN dùng hai lớp bảo vệ cho các tài khoản. Cách bảo vệ được viết chi tiết trong trang web <a href="https://lehboi.github.io/kinh-nghiem/may-tinh/protect" target='_blank'>Bảo-vệ tài-sản-số-hoá</a>.</dd>
 <dt>NÊN cẩn thận khi cho người trong Internet mượn tiền</dt>
 <dd>Người trong Internet có thể đã từng là người thân, người quen mà bạn biết rất rõ, nhưng một hôm người đó bị mất quyền kiểm soát tài khoản dịch vụ online của họ và kẻ gian dùng tài khoản đó để hỏi vay tiền hoặc nhờ mua mã số nạp điện thoại. Gặp trường hợp như vậy, bạn cần liên lạc bằng giọng nói (qua OTT app hoặc điện thoại) với người trong Internet để hỏi cho rõ tình hình, kẻ gian sẽ không dám trả lời bằng giọng nói.
 <br>Một kiểu người trong Internet khác là người gửi tặng bạn một món quà rất có giá trị mà bạn cần phải chi một số tiền kha khá trước khi nhận được quà.</dd>
 </dl>
 <div class="todiscuss">
 Mọi ý kiến thảo luận xin ghi vào trang: <a href="https://www.facebook.com/boi.hong.le/posts/4510442482381400" target="_blank">Facebook</a></div>
+
+<!-- AMP display ads -->
+<amp-ad width="100vw" height="320"
+     type="adsense"
+     data-ad-client="ca-pub-2242556057278004"
+     data-ad-slot="4706617992"
+     data-auto-format="rspv"
+     data-full-width="">
+  <div overflow=""></div>
+</amp-ad>
+
   <hr>
   <div class="footer">
   Bấm các nút sau để liên-lạc 
