--- a/kinh-nghiem/may-tinh/RCS.html
+++ b/kinh-nghiem/may-tinh/RCS.html
@@ -260,7 +260,7 @@ Mở app Messages của Google,
 <br>Bật Enable chat features lên.
 <br>Vậy là bạn đã sẵn sàng dùng RCS.
 <h2>Dùng RCS</h2>
-Trong app Messages, bạn chọn <b>Start chat</b> để bắt đầu soạn tin,
+<div class="flright"><amp-img alt="Chat RCS" src="/images/RCS.png" width="1077" height="282" layout="responsive"></amp-img></div>Trong app Messages, bạn chọn <b>Start chat</b> để bắt đầu soạn tin,
 <br>Gõ số điện thoại hoặc tên người trong Contacts vào dòng To, để tạo một nhóm chat có hơn hai người thì bấm vào hình người có dấu + ở cuối dòng To rồi lần lượt thêm số điện thoại hoặc tên người,
 <br>Ô gõ nội dung tin nhắn ở dưới đáy màn hình sẽ cho biết bên nhận tin có dùng RCS hay không. Nếu trong ô đó có chữ Chat tức là tất cả những số điện thoại nhận tin đều có dùng RCS. Nếu trong ô đó có chữ Text tức là có ít nhất một số điện thoại nhận tin không dùng RCS, bạn nên mời người dùng số điện thoại đó dùng RCS để có được những ưu điểm kể trên.
 <br>Bạn có thể soạn tin RCS dài hơn SMS rất nhiều, không hạn chế số chữ.
@@ -297,6 +297,7 @@ Hầu hết các app gửi tin nhắn qua Internet khác đều có luôn tính 
   Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">http://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
   </div>
 </div>
+
 <amp-analytics>
   <script type="application/json">
     {
@@ -325,6 +326,7 @@ Hầu hết các app gửi tin nhắn qua Internet khác đều có luôn tính 
   }
   </script>
 </amp-analytics>
+
 </main>
 </body>
 </html>
