--- a/kinh-nghiem/linh-tinh/can-biet.html
+++ b/kinh-nghiem/linh-tinh/can-biet.html
@@ -14,6 +14,7 @@
 
 <script async custom-element="amp-social-share" src="https://cdn.ampproject.org/v0/amp-social-share-0.1.js"></script>
 
+<script async custom-element="amp-auto-ads" src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js"></script>
 <script async custom-element="amp-ad" src="https://cdn.ampproject.org/v0/amp-ad-0.1.js"></script>
 
 
@@ -136,6 +137,8 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
 <body>
   
+  <amp-auto-ads type="adsense" data-ad-client="ca-pub-2242556057278004"></amp-auto-ads>
+  
   <!-- top of body -->
   <!-- sidebar menu -->
   <amp-sidebar id="sidebar" layout="nodisplay" side="left">
@@ -236,7 +239,7 @@ Thời đại Internet có nhiều dịch vụ tiện lợi mới xuất hiện,
 <h2 id="dtdd">Khi dùng điện thoại di động</h2>
 <dl>
 <dt>KHÔNG NÊN gọi lại những cuộc gọi lỡ từ số lạ</dt>
-<dd>Nếu người gọi thật sự cần liên lạc với bạn, họ sẽ gọi lại hoặc nhắn tin. Trừ khi bạn đang có thứ gì để bán, bạn không cần phải gọi đến số mà bạn không biết. Và bạn cũng nên tập thói quen <a href="/kinh-nghiem/may-tinh/OTT-apps">nhắn tin sau khi gọi một người lạ mà không được trả lời</a>.</dd>
+<dd>Nếu người gọi thật sự cần liên lạc với bạn, họ sẽ gọi lại hoặc nhắn tin. Trừ khi bạn đang có thứ gì để bán, bạn không cần phải gọi đến số mà bạn không biết. Và bạn cũng nên tập thói quen <a href="/kinh-nghiem/may-tinh/OTT-apps">nhắn tin sau khi gọi mà không được trả lời</a>.</dd>
 <dt>KHÔNG NÊN lo sợ khi bị doạ có thư khởi tố hay bắt giam</dt>
 <dd>Gọi điện thoại thông báo khởi tố hay bắt giam chỉ là trò lừa đảo để người nghe lo sợ rồi giao tiền cho công an giả giữ giùm.</dd>
 </dl>
@@ -255,23 +258,13 @@ Thời đại Internet có nhiều dịch vụ tiện lợi mới xuất hiện,
 <dd>Các công ty dịch vụ điện thoại di động rất thường gửi SMS mời chủ thuê bao dùng các dịch vụ cộng thêm. Có một số dịch vụ cộng thêm có ích như được liệt kê trong trang web <a href="/kinh-nghiem/may-tinh/tien-ich-di-dong">Tiện ích di động</a>, ngoài ra có rất nhiều dịch vụ không có ích như nhận tin tức, nhận kết quả xổ số… Dù có ích hay không có ích thì chủ thuê bao trả trước sẽ rất dễ quên rằng đang trả tiền cho dịch vụ nào. Hậu quả là tài khoản bị trừ tiền đều đặn cho những dịch vụ không cần dùng đến. Trong trang Tiện ích di động vừa nêu cũng có ghi cách kiểm tra các dịch vụ cộng thêm đang phải trả tiền.</dd>
 </dl>
 
-
-<!-- AMP display ads -->
-<amp-ad width="100vw" height="320"
-     type="adsense"
-     data-ad-client="ca-pub-2242556057278004"
-     data-ad-slot="4706617992"
-     data-auto-format="rspv"
-     data-full-width="">
-  <div overflow=""></div>
-</amp-ad>
-
 <h2 id="smartphone">Smartphone Android</h2>
 Những điều dưới đây cũng có thể đúng với smartphone iOS.
 <br>Trong đại dịch Covid-19, việc giãn cách xã hội làm cho smartphone rất cần thiết đối với mỗi người. Tuỳ theo khả năng, bạn có thể chọn smartphone giá từ một triệu đồng trở lên để có thể tận dụng được những lợi ích của nó.
 <dl>
 <dt>NÊN ghi thông tin cấp cứu của bạn vào mục <i>Emergency information</i> trong <i>Settings</i></dt>
-<dd><div class="flright"><amp-img alt="Emergency information" src="/images/emergency.jpg" width="1077" height="1710" layout="responsive"></amp-img></div>Thông tin cấp cứu gồm có tên, địa chỉ, nhóm máu, các chất dị ứng, các bệnh mãn tính, số điện thoại của những người thân nhất. Khi bạn bị bất tỉnh nơi công cộng, được người lạ đưa đi cấp cứu, nhân viên y tế có thể đọc được những thông tin cấp cứu đó bằng cách bấm vào chữ Emergency trong màn hình máy đang bị khoá. Với những thông tin đó, việc cấp cứu sẽ nhanh hơn.
+<dd><div class="flright"><amp-img alt="Emergency information" src="/images/emergency.jpg" width="1077" height="1710" layout="responsive"></amp-img></div>
+Thông tin cấp cứu gồm có tên, địa chỉ, nhóm máu, các chất dị ứng, các bệnh mãn tính, số điện thoại của những người thân nhất. Khi bạn bị bất tỉnh nơi công cộng, được người lạ đưa đi cấp cứu, nhân viên y tế có thể đọc được những thông tin cấp cứu đó bằng cách bấm vào chữ Emergency trong màn hình máy đang bị khoá. Với những thông tin đó, việc cấp cứu sẽ nhanh hơn.
 <br>Khi bạn gặp một người đang bất tỉnh, bạn cũng NÊN thử tìm thông tin cấp cứu trong smartphone của người đó và gọi cho người thân của người đó.</dd>
 <dt>KHÔNG NÊN tắt các app đã dùng xong</dt>
 <dd>Các app đã dùng xong vẫn xuất hiện khi bạn chọn chức năng chuyển màn hình giữa các app, sự xuất hiện đó có hơi làm rối mắt bạn. Tuy nhiên những app đó không thật sự chạy và không làm hao pin hay hao lưu lượng Internet, bạn không cần tắt chúng. Đó là nhờ sự kiểm soát của hệ điều hành Android. Ngược lại, nếu bạn tắt chúng thì bạn có thể bị hao pin hơn khi bạn cần dùng app đó lần nữa vì Android phải đọc lại app đó từ flash storage vào RAM.</dd>
@@ -293,25 +286,16 @@ Những điều dưới đây cũng có thể đúng với smartphone iOS.
 <dd>Smartphone giúp chúng ta ghi lại hồ sơ sức khoẻ lâu dài để có thể xem lại. Một số thông tin liên quan đến sức khoẻ được ghi một cách tự động như là số bước đi, thời gian ngủ. Một số thông tin khác cần phải chủ động ghi vào như là huyết áp, đường huyết…
 <br>App <a href="https://play.google.com/store/apps/details?id=com.google.android.apps.fitness" target='_blank'>Google Fit</a> có thể tự động ghi số bước đi của bạn. App <a href="https://play.google.com/store/apps/details?id=com.urbandroid.sleep" target='_blank'>Sleep as Android</a> có thể ghi lại chất lượng giấc ngủ của bạn. Bạn có thể ghi huyết áp, chỉ số đường huyết, cân nặng, tiền sử bệnh vào app <a href="https://play.google.com/store/apps/details?id=com.mohviettel.sskdt" target='_blank'>Sổ sức khoẻ điện tử</a>.</dd>
 <dt>NÊN cài app hiện tên của số điện thoại lạ</dt>
-<dd>Các app này ghi thêm tên vào số điện thoại, giúp cho bạn biết phần nào về người lạ đang gọi mình, có thể giúp bạn <a href="/kinh-nghiem/may-tinh/spam-call" target='_blank'>từ chối bớt những cuộc gọi không mong muốn</a>.
+<dd>Các app này ghi thêm tên vào số điện thoại, giúp cho bạn biết phần nào về người lạ đang gọi mình, có thể giúp bạn <a href="/kinh-nghiem/may-tinh/spam-call">từ chối bớt những cuộc gọi không mong muốn</a>.
 <dt>KHÔNG NÊN root máy</dt>
 <dd>Người dùng smartphone Android được cài những app không làm thay đổi các thông số quan trọng của hệ điều hành. Để thay đổi các thông số quan trọng đó, các app cần quyền đặc biệt mà Android không cho, và nhiều người root máy để có quyền đặc biệt đó. Máy đã root có nguy cơ mất an toàn khi cài nhằm những app chuyên ăn cắp thông tin trong máy, nhất là những thông tin về tài khoản và mật khẩu.</dd>
 </dl>
 
-<!-- AMP display ads -->
-<amp-ad width="100vw" height="320"
-     type="adsense"
-     data-ad-client="ca-pub-2242556057278004"
-     data-ad-slot="4706617992"
-     data-auto-format="rspv"
-     data-full-width="">
-  <div overflow=""></div>
-</amp-ad>
 
 <h2 id="tknh">Khi dùng tài khoản ngân hàng</h2>
 <dl>
 <dt>NÊN có tài khoản thanh toán</dt>
-<dd>Chỉ cần có thẻ căn cước hoặc thẻ chứng minh nhân dân là đủ điều kiện mở tài khoản thanh toán, không cần sổ hộ khẩu hay tạm trú gì cả. Có tài khoản thanh toán, bạn sẽ thêm được nhiều tiện nghi khác: thẻ thanh toán để mua sắm không cần tiền mặt, chuyển tiền nhanh và sạch sẽ, dùng app ngân hàng để nạp tiền điện thoại trả trước, trả tiền điện-nước, dùng app thương mại điện tử, dùng <a href="/kinh-nghiem/may-tinh/vi-dien-tu">ví-điện-tử</a>, dùng <a href="/huu-ich/dau-tu-co-phieu/quy-dau-tu">quỹ đầu tư</a>… Giảm dùng tiền mặt sẽ giúp bạn kiểm soát chi tiêu dễ hơn và giảm lây nhiễm vi khuẩn hay virus.
+<dd>Chỉ cần có thẻ căn cước hoặc thẻ chứng minh nhân dân là đủ điều kiện mở tài khoản thanh toán, không cần sổ hộ khẩu hay tạm trú gì cả. Có tài khoản thanh toán, bạn sẽ thêm được nhiều tiện nghi khác: thẻ thanh toán để mua sắm không cần tiền mặt, chuyển tiền nhanh và sạch sẽ, dùng app ngân hàng để nạp tiền điện thoại trả trước, trả tiền điện-nước, dùng app thương mại điện tử, dùng <a href="/kinh-nghiem/may-tinh/vi-dien-tu">ví-điện-tử</a>, dùng <a href="/huu-ich/dau-tu-co-phieu/quy-dau-tu">quỹ đầu tư</a>… Giảm dùng tiền mặt sẽ giúp bạn kiểm soát chi tiêu dễ hơn, giảm rủi ro rơi mất tiền và giảm lây nhiễm vi khuẩn hay virus.
 <br>Hiện nay, tôi dùng rất ít tiền mặt. Tôi nhận tiền vào qua tài khoản thanh toán. Tôi trả hầu hết các khoản tiền chính bằng chuyển khoản, thẻ thanh toán, ví-điện-tử. Tôi đã chuyển tiền khi trả tiền thuê nhà, khi đóng phí quản lý chung cư, khi đi chữa răng, khi gọi thợ đến sửa cửa, khi đi mua đồ gắn phòng tắm. App mobile banking với <a href="/kinh-nghiem/may-tinh/vi-dien-tu">VietQR</a> giúp chuyển tiền liên ngân hàng nhanh chóng và chính xác.
 <br>Người bán hàng lẻ hoặc làm dịch vụ nhỏ cũng có thể nhận thanh toán không tiền mặt bằng ví-điện-tử. Người bán có thể in sẵn QR code của ví của mình ra giấy, ép nhựa rồi treo ngay nơi bán.</dd>
 <dt>NÊN chọn ngân hàng miễn phí</dt>
@@ -332,18 +316,10 @@ Bạn phải <b>vô cùng</b> cẩn thận với tài khoản tiền của bạn
 <dt>KHÔNG NÊN để thẻ của bạn ra khỏi tầm mắt</dt>
 <dd>Trên mặt thẻ có in những chữ và số đủ dùng để thanh toán qua Internet. Khi thẻ của bạn ra khỏi tầm mắt đủ lâu, kẻ gian có thể chụp hình hai mặt thẻ để có những chữ và số đó.</dd>
 <dt>NÊN sẵn sàng khoá thẻ nhanh nhất</dt>
-<dd>Khi những chữ và số in trên mặt thẻ của bạn bị lộ, nó có thể bị kẻ gian dùng để mua hàng qua Internet mà người trả tiền là bạn. Việc bị lộ có thể xảy ra khi bạn thanh toán bằng thẻ trực tiếp hoặc thanh toán ở một website rồi website đó bị lộ. Khi thấy có một giao dịch bất thường xảy ra, bạn hãy khoá thẻ ngay lập tức. Cách khoá thẻ nhanh nhất là dùng app của ngân hàng phát hành thẻ, cách này nhanh hơn là gọi điện thoại đến ngân hàng vì tổng đài của các ngân hàng thường rất bận.
+<dd>Khi những chữ và số in trên mặt thẻ của bạn bị lộ, nó có thể bị kẻ gian dùng để mua hàng qua Internet mà người trả tiền là bạn. Việc bị lộ có thể xảy ra khi bạn thanh toán bằng thẻ trực tiếp hoặc thanh toán ở một website rồi website đó bị lộ. Khi thấy có một giao dịch bất thường xảy ra, bạn hãy khoá thẻ ngay lập tức.
+<br>Cách khoá thẻ nhanh nhất là dùng app của ngân hàng phát hành thẻ, cách này nhanh hơn là gọi điện thoại đến ngân hàng vì tổng đài của các ngân hàng thường rất bận.
 </dl>
 
-<!-- AMP display ads -->
-<amp-ad width="100vw" height="320"
-     type="adsense"
-     data-ad-client="ca-pub-2242556057278004"
-     data-ad-slot="4706617992"
-     data-auto-format="rspv"
-     data-full-width="">
-  <div overflow=""></div>
-</amp-ad>
 
 <h2 id="shop">Khi mua hàng từ xa</h2>
 <dl>
@@ -356,23 +332,28 @@ Bạn phải <b>vô cùng</b> cẩn thận với tài khoản tiền của bạn
 <h2 id="online">Khi dùng các dịch vụ online</h2>
 <dl>
 <dt>NÊN bảo vệ các tài khoản của bạn thật cẩn thận</dt>
-<dd>Các tài khoản email có thể liên quan đến các dịch vụ ngân hàng và tài chính, cần được giữ thật kỹ. NÊN dùng hai lớp bảo vệ cho các tài khoản. Cách bảo vệ được viết chi tiết trong trang web <a href="https://lehboi.github.io/kinh-nghiem/may-tinh/protect" target='_blank'>Bảo-vệ tài-sản-số-hoá</a>.</dd>
+<dd>Các tài khoản email có thể liên quan đến các dịch vụ ngân hàng và tài chính, cần được giữ thật kỹ. NÊN dùng hai lớp bảo vệ cho các tài khoản. Cách bảo vệ được viết chi tiết trong trang web <a href="/kinh-nghiem/may-tinh/protect">Bảo-vệ tài-sản-số-hoá</a>.</dd>
 <dt>NÊN cẩn thận khi cho người trong Internet mượn tiền</dt>
 <dd>Người trong Internet có thể đã từng là người thân, người quen mà bạn biết rất rõ, nhưng một hôm người đó bị mất quyền kiểm soát tài khoản dịch vụ online của họ và kẻ gian dùng tài khoản đó để hỏi vay tiền hoặc nhờ mua mã số nạp điện thoại. Gặp trường hợp như vậy, bạn cần liên lạc bằng giọng nói (qua OTT app hoặc điện thoại) với người trong Internet để hỏi cho rõ tình hình, kẻ gian sẽ không dám trả lời bằng giọng nói.
 <br>Một kiểu người trong Internet khác là người gửi tặng bạn một món quà rất có giá trị mà bạn cần phải chi một số tiền kha khá trước khi nhận được quà.</dd>
+<dt>NÊN dùng filter trong Gmail</dt>
+<dd>Để tự động xử lý những thư không quan trọng và thư rác.
+<br>Những thư không quan trọng là thư gửi vào những nhóm ví dụ như nhóm bạn học, nhóm đồng nghiệp cũ… Hãy để filter tự động gắn nhãn và archive những thư đó, như vậy bạn không thấy chúng xuất hiện trong Inbox, khi nào rảnh rỗi thì mở chúng ra xem theo các nhãn.
+<br>Phần lớn thư rác đã được đưa vào ngăn Spam, để ngăn Spam gọn hơn bạn có thể dùng filter để tự động xoá những thư quảng cáo gửi nhiều lần từ những nguồn cố định. Hãy chọn một phần tiêu biểu trong thư quảng cáo làm điều kiện cho filter, khi gặp đúng phần đó thì Gmail tự động xoá luôn thư rác. Phần tiêu biểu có thể là số điện thoại, web domain name của kẻ gửi thư quảng cáo.</dd>
 </dl>
 <div class="todiscuss">
-Mọi ý kiến thảo luận xin ghi vào trang: <a href="https://www.facebook.com/boi.hong.le/posts/4510442482381400" target="_blank">Facebook</a></div>
+Các bài liên quan:
+<br>* <a href="/kinh-nghiem/may-tinh/OTT-apps">Các OTT app để liên-lạc</a>
+<br>* <a href="/kinh-nghiem/may-tinh/tien-ich-di-dong">Các tiện ích di động</a>
+<br>* <a href="/kinh-nghiem/may-tinh/googlemaps">Kinh-nghiệm dùng Google Maps</a>
+<br>* <a href="/kinh-nghiem/may-tinh/spam-call">Chặn những cuộc-gọi-tiếp-thị</a>
+<br>* <a href="/kinh-nghiem/may-tinh/vi-dien-tu">ví-điện-tử</a>
+<br>* <a href="/kinh-nghiem/may-tinh/protect">Bảo-vệ tài-sản-số-hoá</a> 
+<br>* <a href="/huu-ich/dau-tu-co-phieu/quy-dau-tu">Quỹ đầu tư</a>
+<br>* <a href="/huu-ich/chi-tieu">Kiểm soát chi tiêu</a>
+<br>Mọi ý kiến thảo luận xin ghi vào trang: <a href="https://www.facebook.com/boi.hong.le/posts/4510442482381400" target="_blank">Facebook</a>
+</div>
 
-<!-- AMP display ads -->
-<amp-ad width="100vw" height="320"
-     type="adsense"
-     data-ad-client="ca-pub-2242556057278004"
-     data-ad-slot="4706617992"
-     data-auto-format="rspv"
-     data-full-width="">
-  <div overflow=""></div>
-</amp-ad>
 
   <hr>
   <div class="footer">
@@ -390,6 +371,7 @@ Mọi ý kiến thảo luận xin ghi vào trang: <a href="https://www.facebook.
   Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">http://LeHBoi.github.io</a>. Điều kiện trên cũng áp dụng với domain name trước đây của website này là LHBOI.NAME.VN.
   </div>
 </div>
+
 <amp-analytics>
   <script type="application/json">
     {
@@ -418,6 +400,7 @@ Mọi ý kiến thảo luận xin ghi vào trang: <a href="https://www.facebook.
   }
   </script>
 </amp-analytics>
+
 </main>
 </body>
 </html>
